--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,2 +1,3 @@
-spring.application.name= servicio-item
-server.port= 8002
+spring.application.name=servicio-item
+server.port=8002
+servicio-productos.ribbon.listOfServers=localhost:8001,localhost:9001
