--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -1,3 +1,6 @@
 spring.application.name=servicio-item
 server.port=8002
 servicio-productos.ribbon.listOfServers=localhost:8001,localhost:9001
+
+#validar si lleva el defaultZone
+eureka.client.service-ur.defaultZone=http://localhost:8761/eureka
