--- a/pom.xml
+++ b/pom.xml
@@ -45,10 +45,12 @@
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-openfeign</artifactId>
 		</dependency>
+		<!-- Esta dependencia ya viene en el eureka-client 
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>spring-cloud-starter-netflix-ribbon</artifactId>
 		</dependency>
+		 -->
 		<dependency>
 			<groupId>org.springframework.cloud</groupId>
 			<artifactId>
