--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -6,3 +6,8 @@ server.port=8002
 
 #validar si lleva el defaultZone
 eureka.client.service-ur.defaultZone=http://localhost:8761/eureka
+
+#Hystrix debe de ser mayor a la suma de los de ribbon
+#hystrix.command.default.execution.isolation.thread.timeoutInMilliseconds: 15000
+#ribbon.ConnectTimeout: 3000
+#ribbon.ReadTimeout: 10000
