calls to product rest service

--- a/src/main/resources/bootstrap.properties
+++ b/src/main/resources/bootstrap.properties
@@ -1,6 +1,8 @@
 #Service name
 spring.application.name=servicio-item
 #Active Profile
-spring.profiles.active=prod
+spring.profiles.active=dev
 #Configuration server
 spring.cloud.config.uri=http://localhost:8888
+#Actuator for update @RefreshScope
+management.endpoints.web.exposure.include=*
